app/assets/stylesheets/argo/argo.sass
#header-navbar 
  a.navbar-brand
    background: transparent image-url('logo.png') no-repeat top left
    background-size: 152px 52px

a.no-underline
  text-decoration: none
  border-bottom: none

table
  border-collapse: collapse
  border-spacing: 0

#bd, #bd #sidebar
  overflow: visible !important

.header-column
  padding-left: 2px
  padding-right: 2px

#spreadsheet-upload-container
  margin-top: 4px
  margin-bottom: 4px
  margin-left: 2px
  margin-right: 2px

.spreadsheet-right
  text-align: right

.spreadsheet-row
  margin-top: 15px

.spreadsheet-bottom-row
  padding-bottom: 6px

.spreadsheet-radio
  margin-top: 0px

.spreadsheet-checkbox
  margin-top: -2px
  margin-left: 8px
  padding-left: 14px

.spreadsheet-help-row
  margin-bottom: 10px

#bulk-upload-table
  padding-top: 16px
  padding-bottom: 16px

#spreadsheet-log-table-container
  height: 600px
  overflow: auto

#content #spreadsheet-start-header
  padding-top: 20px
  margin-left: 0px
  margin-right: 0px


#facets
  .facet-count
    margin-left: .5em
  a.remove
    margin-left: .5em
    float: right
    &:after
      color: red
      content: '[X]'
.blacklight-wf_error_ssim
  color: red
#doc4
  width: 100%

.apo-register-error
  color: red

#report_container
  margin-top: 1.5em
.fileUpdate

  margin: 5px
.register-label-div
  width: 90px
  float: left
.collection-register-label-div
  width: 180px
  float: left
.register-role-input
  width: 845px

.metadata-display
  dl
    dt
      float: left
      color: #555
      min-width: 9.5em
      padding: 0 5px 0 0
      text-align: left
      width: 11em
      overflow: hidden
      text-overflow: ellipsis
      white-space: nowrap
    dd
      padding: 0
      margin-left: 11.6em

.bulk_button
  cursor: pointer
  width: 160px
  padding-left: 10px
  padding-right: 10px
  text-align: center
  height: 25px
  line-height: 25px
  background: #4479BA
  color: #FFF
  font: Arial
  border: 1px solid #84bbf3

.CodeRay
  pre
    border: none !important
    white-space: pre-wrap
    font-family: monospace
.nonblockingForm
  display: inline
.ui-dialog
  top: 200px !important

#documents+.pagination
  border-top-width: 1px

.pageEntriesInfo
  display: none

#previousNextDocument
  padding: 0.8em
  border-top: 0
  .next
    float: none
  .disabled
    color: #AAA

#pid_list
  textarea
    height: 17em
    width: 30em

button.close
  opacity: 1

#bulk-spreadsheet-warning
  color: $color-cardinal-red

#xmlEditForm
  textarea
    font-family: monospace
    min-height: 400px

#buttons
  margin-top: 6px

.bulk-buttons
  margin-left: 5px
  margin-right: 5px

.bulk-buttons-row
  margin-top: 16px
  margin-bottom: 16px

.bulk-btn-danger
  background-color: $brand-danger

